objects/vlocity_cmt__AccountAppliedPromotion__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AccountDiscountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account Discount record with which this object is associated with.</description>
        <label>Account Discount</label>
        <referenceTo>vlocity_cmt__AccountDiscount__c</referenceTo>
        <relationshipLabel>Applied Promotions</relationshipLabel>
        <relationshipName>AppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliesTo__c</fullName>
        <description>Identifies to what the promotional pricing is applied: to a specific asset, to multiple assets, to a contract or to an account.</description>
        <label>Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Multiple Assets</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the asset to which the promotional pricing is applied. Used when a promotion is applied to a specific asset.</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Applied Promotions</relationshipLabel>
        <relationshipName>AppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <description>(Required) Identifies the account with billing/charging responsibility to which the promotional pricing is applied.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applied Promotions</relationshipLabel>
        <relationshipName>AccountAppliedPromotions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancellationDate__c</fullName>
        <description>Date when the customer&apos;s participation in the promotion was cancelled. Used especially when the customer chooses to cancel out of the promotion prematurely.</description>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancellationReason__c</fullName>
        <label>Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancellationStatus__c</fullName>
        <description>Whether or not the customer has cancelled out of their participation in the promotion. Values such as &quot;Canceled&quot; and &quot;Not Canceled&quot;.</description>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Not Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CommitmentEndDate__c</fullName>
        <description>Commitment end date for the services provided under this promotion for this customer. Penalties may be incurred for exiting out of the promotional conditions during the commitment period.</description>
        <label>Commitment End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CommitmentStartDate__c</fullName>
        <description>Commitment start date for the services provided under this promotion for this customer. Penalties may be incurred for exiting out of the promotional conditions during the commitment period.</description>
        <label>Commitment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractDiscountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Discount</label>
        <referenceTo>vlocity_cmt__ContractVersionDiscount__c</referenceTo>
        <relationshipLabel>Account Applied Promotions</relationshipLabel>
        <relationshipName>AccountAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the contract to which the promotional pricing is applied. Used when a promotion is applied to all qualifying assets within a contract.</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Applied Promotions</relationshipLabel>
        <relationshipName>AppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderDiscountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Discount</label>
        <referenceTo>vlocity_cmt__OrderDiscount__c</referenceTo>
        <relationshipLabel>Account Applied Promotions</relationshipLabel>
        <relationshipName>AccountAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingEndDate__c</fullName>
        <description>End date of the promotional pricing for this customer.</description>
        <label>Benefit End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingStartDate__c</fullName>
        <description>Start date of the promotional pricing for this customer.</description>
        <label>Benefit Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the promotion applied which defines the promotional pricing.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipName>AccountAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReasonForCancellation__c</fullName>
        <description>Text describing the reason why the customer canceled their participation in the promotion.</description>
        <label>Reason for Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <description>Sequence in which this promotion is applied to the customer&apos;s asset or assets. Used to properly calculate discounted pricing.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Applied Promotion</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>